--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-end" data-aos="fade-up">
+                <div class="d-flex justify-content-end" data-aos="fade-right" data-aos-duration="3000">
                     <button class="px-4 py-2 font-bold text-white rounded-full md:mb-12 md:mr-20 hover:bg-blue-700 " id="btn-magazine">
                         <a href="artikel.html " class="link-light ">View More</a>
                     </button>
@@ -214,8 +214,8 @@
             Gallery
         </h1> -->
 
-        <div class="py-6 ml-auto kata-gallery md:flex justify-items-end md:w-80 ">
-            <img src="images/kata-gallery.png " alt=" " class="md:content">
+        <div class="py-6 ml-auto kata-gallery md:flex justify-items-end md:w-80">
+            <img src="images/kata-gallery.png " alt=" " class="md:content" data-aos="fade-right">
         </div>
         <h1 class="text-5xl font-bold gallery-header" id="gallery-header">
             Gallery
@@ -250,7 +250,7 @@
 
     <!-- magazine -->
     <section class=" md:h-screen mt-72" id="magazine ">
-        <h1 class="text-6xl font-bold text-center ">Our Magazine</h1>
+        <h1 class="text-6xl font-bold text-center magazine-judul">Our Magazine</h1>
         <div class="mt-3 ml-auto mr-auto line-3 "></div>
         <p class="mt-5 ml-auto mr-auto text-sm text-center md:max-w-xl ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
         <!-- list-magazine -->
@@ -278,7 +278,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end md:mb-10" md:data-aos="zoom-in" data-aos="fade-up">
+        <div class="d-flex justify-content-end md:mb-10" md:data-aos="zoom-in" data-aos="fade-right">
             <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700 " id="btn-magazine">
                 <a href="magazine.html " class="link-light ">View More</a>
             </button>
@@ -286,20 +286,20 @@
     </section>
     <!-- end magazine -->
     <!-- footer -->
-    <footer class="flex mt-10 md:mt-56 footer justify-items-start" id="footer">
+    <footer class="flex mt-10 md:mt-56 footer justify-items-start " id="footer">
         <div class="container" id="item-footer">
             <div class="grid gap-4 md:grid-flow-col md:mt-6">
                 <div class="md:col-span-3">
                     <div class="flex logo justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
                     </div>
-                    <div class="item">
-                        <h5 class="mt-3 text-black kontak">Binus University 2024</h5>
-                        <h5 class="mt-3 text-black kontak">School of Computer Science</h5>
+                    <div class="font-bold item">
+                        <p class="mt-3 kontak">Binus University 2024</p>
+                        <p class="mt-3 kontak">School of Computer Science</p>
                     </div>
                 </div>
                 <div class="md:row-span-3 ">
-                    <h5 class="font-bold text-black md:mt-3 kontak md:mb-3">Kontak Kami</h5>
+                    <h5 class="font-bold md:mt-3 kontak md:mb-3">Kontak Kami</h5>
                     <div class="flex sosmed" id="sosmed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
