--- a/public/magazine.html
+++ b/public/magazine.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panorama</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-    
+
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light ">
@@ -60,61 +61,61 @@
     </header>
 
 
-    <div class="container corner">
-       <div class="row mt-5">
-           <div class="col">
-               <h1>
-                Magazine’s <span>Corner</span>
-               </h1>
-           </div>
-       </div>
-       <div class="row">
-           <div class="col-md-4">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus porro magni architecto adipisci ipsam aspernatur debitis maxime. Nesciunt, ipsam tempore?</p>
-           </div>
-       </div>
+    <div class="container corner" data-aos="fade-right">
+        <div class="mt-5 row">
+            <div class="col">
+                <h1>
+                    Magazine’s <span>Corner</span>
+                </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus porro magni architecto adipisci ipsam aspernatur debitis maxime. Nesciunt, ipsam tempore?</p>
+            </div>
+        </div>
     </div>
 
 
     <section id="project">
         <div class="container mt-5 majalah">
-            <div class="row text-center ">
-                <div class="col-md-3 mb-3">
-                    <img src="images/majalah1.png"  class="card-img-top" alt="...">
-                    <p class="mt-3" >Vol 2.</p>
-                    <p>Brand New You</p>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <img src="images/majalah2.png"  class="card-img-top" alt="...">
+            <div class="text-center row ">
+                <div class="mb-3 col-md-3" data-aos="flip-left">
+                    <img src="images/majalah1.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="mb-3 col-md-3" data-aos="flip-left">
+                    <img src="images/majalah2.png" class="card-img-top" alt="...">
+                    <p class="mt-3">Vol 2.</p>
+                    <p>Brand New You</p>
+                </div>
+                <div class="mb-3 col-md-3" data-aos="flip-left">
                     <img src="images/majalah3.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="mb-3 col-md-3" data-aos="flip-left">
                     <img src="images/majalah4.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="mb-3 col-md-3" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     <img src="images/majalah5.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="mb-3 col-md-3" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     <img src="images/majalah6.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="mb-3 col-md-3" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     <img src="images/majalah7.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="mb-3 col-md-3" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     <img src="images/majalah8.png" class="card-img-top" alt="...">
                     <p class="mt-3">Vol 2.</p>
                     <p>Brand New You</p>
@@ -122,26 +123,26 @@
             </div>
         </div>
     </section>
-  
 
-    
+
+
     <!-- Modal -->
     <div class="modal fade" id="gallery-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-            <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/majalah1.png" class="modal-img" alt="modal img">
+                </div>
             </div>
-            <div class="modal-body">
-                <img src="images/majalah1.png" class="modal-img" alt="modal img">
-            </div>
-        </div>
         </div>
     </div>
 
 
-    <footer class="flex mt-10 md:mt-56 footer justify-items-start" id="footer" >
+    <footer class="flex mt-10 md:mt-56 footer justify-items-start" id="footer">
         <div class="container" id="item-footer">
             <div class="grid gap-4 md:grid-flow-col md:mt-6">
                 <div class="md:col-span-3">
@@ -159,14 +160,16 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
                                 d="M12.031 6.172c-3.181 0-5.767 2.586-5.768 5.766-.001 1.298.38 2.27 1.019 3.287l-.582 2.128 2.182-.573c.978.58 1.911.928 3.145.929 3.178 0 5.767-2.587 5.768-5.766.001-3.187-2.575-5.77-5.764-5.771zm3.392 8.244c-.144.405-.837.774-1.17.824-.299.045-.677.063-1.092-.069-.252-.08-.575-.187-.988-.365-1.739-.751-2.874-2.502-2.961-2.617-.087-.116-.708-.94-.708-1.793s.448-1.273.607-1.446c.159-.173.346-.217.462-.217l.332.006c.106.005.249-.04.39.298.144.347.491 1.2.534 1.287.043.087.072.188.014.304-.058.116-.087.188-.173.289l-.26.304c-.087.086-.177.18-.076.354.101.174.449.741.964 1.201.662.591 1.221.774 1.394.86s.274.072.376-.043c.101-.116.433-.506.549-.68.116-.173.231-.145.39-.087s1.011.477 1.184.564.289.13.332.202c.045.072.045.419-.1.824zm-3.423-14.416c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm.029 18.88c-1.161 0-2.305-.292-3.318-.844l-3.677.964.984-3.595c-.607-1.052-.927-2.246-.926-3.468.001-3.825 3.113-6.937 6.937-6.937 1.856.001 3.598.723 4.907 2.034 1.31 1.311 2.031 3.054 2.03 4.908-.001 3.825-3.113 6.938-6.937 6.938z" />
-                            </svg>
+                        </svg>
                         <svg xmlns="http://www.w3.org/2000/svg " width="24 " height="24 " viewBox="0 0 24 24 " class="md:ml-3 ">
-                            <a href="https://instagram.com/panoramabinusmalang?utm_medium=copy_link">     <path
-                                d="M14.829 6.302c-.738-.034-.96-.04-2.829-.04s-2.09.007-2.828.04c-1.899.087-2.783.986-2.87 2.87-.033.738-.041.959-.041 2.828s.008 2.09.041 2.829c.087 1.879.967 2.783 2.87 2.87.737.033.959.041 2.828.041
+                            <a href="https://instagram.com/panoramabinusmalang?utm_medium=copy_link">
+                                <path
+                                    d="M14.829 6.302c-.738-.034-.96-.04-2.829-.04s-2.09.007-2.828.04c-1.899.087-2.783.986-2.87 2.87-.033.738-.041.959-.041 2.828s.008 2.09.041 2.829c.087 1.879.967 2.783 2.87 2.87.737.033.959.041 2.828.041
             1.87 0 2.091-.007 2.829-.041 1.899-.086 2.782-.988 2.87-2.87.033-.738.04-.96.04-2.829s-.007-2.09-.04-2.828c-.088-1.883-.973-2.783-2.87-2.87zm-2.829 9.293c-1.985 0-3.595-1.609-3.595-3.595 0-1.985 1.61-3.594 3.595-3.594s3.595 1.609 3.595 3.594c0
             1.985-1.61 3.595-3.595 3.595zm3.737-6.491c-.464 0-.84-.376-.84-.84 0-.464.376-.84.84-.84.464 0 .84.376.84.84 0 .463-.376.84-.84.84zm-1.404 2.896c0 1.289-1.045 2.333-2.333 2.333s-2.333-1.044-2.333-2.333c0-1.289 1.045-2.333 2.333-2.333s2.333 1.044
             2.333 2.333zm-2.333-12c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.958 14.886c-.115 2.545-1.532 3.955-4.071 4.072-.747.034-.986.042-2.887.042s-2.139-.008-2.886-.042c-2.544-.117-3.955-1.529-4.072-4.072-.034-.746-.042-.985-.042-2.886
-            0-1.901.008-2.139.042-2.886.117-2.544 1.529-3.955 4.072-4.071.747-.035.985-.043 2.886-.043s2.14.008 2.887.043c2.545.117 3.957 1.532 4.071 4.071.034.747.042.985.042 2.886 0 1.901-.008 2.14-.042 2.886z " /></a>
+            0-1.901.008-2.139.042-2.886.117-2.544 1.529-3.955 4.072-4.071.747-.035.985-.043 2.886-.043s2.14.008 2.887.043c2.545.117 3.957 1.532 4.071 4.071.034.747.042.985.042 2.886 0 1.901-.008 2.14-.042 2.886z " />
+                            </a>
                         </svg>
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="md:ml-3">
                             <path
@@ -180,9 +183,12 @@
     </footer>
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+    <script src="/public/js/main.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
     <script src="js/main.js"></script>
 </body>
 
