tmbahin klik gmbar di artikel

--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,9 @@
                 <div class="flex flex-col items-start p-5 md:flex-row" data-aos="fade-up">
                     <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg " alt="Mountain ">
+                            <a href="">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Event</div>
                                 <p class="text-base font-bold text-gray-700 ">
@@ -163,7 +165,9 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
+                          <a href="">
                             <img class="object-cover object-center w-full h-56 " src="/public/images/ldk.jpg " alt="Mountain ">
+                          </a>
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Event</div>
                                 <p class="text-base font-bold text-gray-700 ">
@@ -174,7 +178,9 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/25.png " alt="Mountain ">
+                            <a href="">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/25.png " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Event</div>
                                 <p class="text-base font-bold text-gray-700 ">
@@ -185,7 +191,9 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/artikel1.jpg " alt="Mountain ">
+                            <a href="">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/artikel1.jpg " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
                                 <div class="mb-2 text-xl font-bold title ">Mountain</div>
                                 <p class="text-base font-bold text-gray-700 ">
