page artikel 4 biji dah beres

--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
                 <div class="flex flex-col items-start p-5 md:flex-row" data-aos="fade-up">
                     <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <a href="">
+                            <a href="artikel-detail.html">
                                 <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg " alt="Mountain ">
                             </a>
                             <div class="px-6 py-4 ">
@@ -165,7 +165,7 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                          <a href="">
+                          <a href="artikel-detail2.html">
                             <img class="object-cover object-center w-full h-56 " src="/public/images/ldk.jpg " alt="Mountain ">
                           </a>
                             <div class="px-6 py-4 ">
@@ -178,7 +178,7 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <a href="">
+                            <a href="artikel-detail3.html">
                                 <img class="object-cover object-center w-full h-56 " src="/public/images/25.png " alt="Mountain ">
                             </a>
                             <div class="px-6 py-4 ">
@@ -191,7 +191,7 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <a href="">
+                            <a href="artikel-detail4.html">
                                 <img class="object-cover object-center w-full h-56 " src="/public/images/artikel1.jpg " alt="Mountain ">
                             </a>
                             <div class="px-6 py-4 ">
