--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="images/icon_header.png" alt="" width="200" height="76">
+                        <img src="/public/images/icon_header.png" alt="" width="200" height="76">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -77,9 +77,9 @@
                 </div>
                 <div class="col-lg-1"></div>
                 <div class=" foto-panorama col-lg-7 d-flex justify-content-around" data-aos="fade-left">
-                    <img src="images/unsplash_9LXN7hIPbcA.png" alt="" class="foto-pertama">
-                    <img src="images/unsplash_qWYvQMIJyfE.png" id="foto-kedua" alt="">
-                    <img src="images/unsplash_1_GpBh396Zk.png" alt="" class="foto-ketiga">
+                    <img src="/public/" alt="" class="foto-pertama">
+                    <img src="/public/images/unsplash_qWYvQMIJyfE.png" id="foto-kedua" alt="">
+                    <img src="/public/images/unsplash_1_GpBh396Zk.png" alt="" class="foto-ketiga">
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates nisi cupiditate incidunt. Dignissimos praesentium asperiores eligendi velit nihil amet rem.</p>
                 </div>
                 <div class="col-lg-7" data-aos="zoom-in">
-                    <img src="images/about_us.png" alt="">
+                    <img src="/public/images/about_us.png" alt="">
                 </div>
             </div>
         </div>
