--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
                     <img src="/public/images/g-3.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/g-4.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-1.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/g-5.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-2.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full">
-                    <img src="/public/images/artikel4.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/artikel-foto-anak.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
             </div>
         </div>
@@ -279,7 +279,7 @@
         </div>
         <div class="d-flex justify-content-end md:mb-10" md:data-aos="zoom-in" data-aos="fade-right">
             <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700 " id="btn-magazine">
-                <a href="magazine.html " class="link-light ">View More</a>
+                <a href="/public/magazine.html " class="link-light ">View More</a>
             </button>
         </div>
     </section>
