--- a/public/artikel-detail2.html
+++ b/public/artikel-detail2.html
@@ -71,11 +71,50 @@
         <div class="container">
             <div class="gap-2 md:grid md:grid-cols-3">
                 <div class="w-full col-span-2 md:grid">
-                    <div class="mt-5 text-5xl font-bold header-title">Event Panorama Pada Tahun Ajaran Baru</div>
-                    <img src="/public/images/artikel3.jpg" class="w-full mt-5 rounded-xl">
+                    <div class="mt-5 text-5xl font-bold header-title">Fotografi Bukan Sekedar Cekrek!</div>
+                    <img src="/public/images/detail-artikel2.jpg" class="w-full mt-5 rounded-xl">
                     <div class="mt-5 text-sm caption">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quasi dicta! Possimus sed earum minima eligendi quo vero odit non, laudantium iusto illum atque fugit quas quaerat aliquid necessitatibus quibusdam. Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Nesciunt eum, consequatur ullam maiores cumque ipsam eius asperiores animi magni nemo accusantium doloribus dolorem laborum dolore distinctio dolorum ipsum quae debitis!
+                        <h2>Pengertian Fotografi</h2>
+                        <p>
+                        Menurut Kamus Besar Bahasa Indonesia (KBBI) fotografi diartikan sebagai seni dan penghasilan gambar dan cahaya pada film atau permukaan yang dipekakan. 
+                        Sedangkan menurut Wikipedia fotografi berasal dari Bahasa Inggris yaitu ‘photography’ yang mana berasal dari Bahasa Yunani yaitu 
+                        ‘photos’ artinya cahaya dan ‘Grafo’ yang artinya menulis atau melukis. Sehingga secara umum fotografi dapat diartikan sebagai proses
+                        melukis atau menulis dengan menggunakan media cahaya. Sementara itu menurut Ansel Adams, fotografi adalah sebagai media berekspresi dan 
+                        komunikasi yang kuat, menawarkan berbagai persepsi, interpretasi,dan ekseskusi yang tak terbatas.
+                        </p>
+                        <h2>Teknik-teknik Fotografi</h2>
+                        <p>
+                        Untuk menjadi fotografer tentunya tidak hanya bermodalkan peralatan yang ‘wah’ dalam arti jenis 
+                        kamera dan lensa yang lengkap. Salah satu kunci yang sangat penting bagi fotografer adalah menguasai 
+                        teknik-teknik fotografi. Banyak sekali teknik fotografi yang akan menambah variasi dan keindahan foto sehingga 
+                        menarik dan tidak monoton, antara lain:
+                        </p>
+                        <ul>
+                            <li>Zooming</li>
+                            <p> Zooming adalah teknik yang membuat objek utama terlihat jelas, 
+                                sementara background terlihat kabur. Teknik ini berfungsi untuk mempertegas 
+                                objek dan membuatnya makin mencolok. Perubahan panjang focus hanya dapat dilakukan dengan 
+                                lensa zoom, gunakan kecepatan rana tidak lebih dari 1/30 detik untuk menghasilkan kesan gerak. 
+                                Dalam mengaplikasikan teknik ini sebaiknya menggunakan tripod.</p>
+                            <li>Panning</li>
+                            <p>Panning adalah salah satu teknik fotografi yang digunakan untuk membekukan gerakan pada benda yang bergerak. 
+                                Cara melakukan panning adalah dengan menggerakan kamera searah dengan arah gerakan objek yang ingin dibidik sehingga 
+                                objek akan tampak focus, sementara background akan tampak kabur.</p>
+                            <li>Freezing</li>
+                            <p>Adalah teknik memotret pada sebuah objek yang sedang bergerak, misalnya air, orang yang sedang berolahraga, 
+                                dengan seolah-olah kita dapat menghentikan objek yang sedang bergerak tersebut. Cara mengaplikasikan teknik tersebut 
+                                adalah dengan menggunakan kecepatan /shutter speed lensa yang tinggi.</p>
+                            <li>Macro</li>
+                            <p>Macro adalah teknik foto yang diambil dengan jarak yang sangat dekat untuk mendapatkan detail yang tinggi pada sebuah 
+                                objek berukuran kecil. Foto makro biasannya memiliki rasio 1:1 dimana gambar yang dihasilkan sama ukurannya dengan benda aslinya.</p>
+                            <li>Siluet</li>
+                            <p> Siluet adalah teknik foto dimana objek terlihat gelap sedangkan background atau latar belakang foto memiliki 
+                                warna yang lebih terang. Cara mengaplikasikan teknik ini adalah dengan menempatkan objek atau subjek di depan cahaya dengan mengatur exposure di kamera.</p>
+                            <li>Bulb</li>
+                            <p>Bulb adalah teknik foto menggambar menggunakan cahaya, berbeda dengan pengertian fotografi yang melukis 
+                                dengan cahaya. Bulb memotret cahaya di atas cahaya. Cara pengaplikasian teknik ini adalah dengan mengatur shutter 
+                                speed kamera selama mungkin sehingga akan mendapatkan garis-garis yang dihasilkan oleh objek bercahaya yang berjalan.</p>
+                        </ul>            
                     </div>
                 </div>
                 <div class=" md:row-span-3">
