--- a/public/artikel-detail3.html
+++ b/public/artikel-detail3.html
@@ -71,11 +71,52 @@
         <div class="container">
             <div class="gap-2 md:grid md:grid-cols-3">
                 <div class="w-full col-span-2 md:grid">
-                    <div class="mt-5 text-5xl font-bold header-title">Event Panorama Pada Tahun Ajaran Baru</div>
-                    <img src="/public/images/artikel3.jpg" class="w-full mt-5 rounded-xl">
+                    <div class="mt-5 text-5xl font-bold header-title">Ragam Kamera</div>
+                    <img src="/public/images/detail-artikel3.jpg" class="w-full mt-5 rounded-xl">
                     <div class="mt-5 text-sm caption">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quasi dicta! Possimus sed earum minima eligendi quo vero odit non, laudantium iusto illum atque fugit quas quaerat aliquid necessitatibus quibusdam. Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Nesciunt eum, consequatur ullam maiores cumque ipsam eius asperiores animi magni nemo accusantium doloribus dolorem laborum dolore distinctio dolorum ipsum quae debitis!
+                        <h2>Bedanya Kamera Full Frame dengan APS-C</h2>
+                        <p>
+                            Apakah anda tertarik dengan fotografi? Jika iya, kemungkinan besar anda akan menentukan kamera apa yang 
+                            cocok untuk anda, ada begitu banyak jenis kamera diluaran sana, belum lagi ada pilihan mirrorless dan DSLR.  
+                            Selain itu, kuran sonsor di kamera juga menjadi salah satu faktor yang layak anda peritungkan. Ukuran sensor dari 
+                            sebuah kamera akan menentukan hasil foto, pilihannya kamera dengan sensor APS-C atau Full-frame. Antara kamera full-frame 
+                            vs APS-C terdapat perbedaan yang cukup signifikan. Berikut beberapa perbedaan kamera full-frame dan kamera APS-C.
+                        </p>
+                        <p>
+                            Bisa jadi anda sudah mengetahui perbedaan atar keduanya. Namun, tidak ada salahnya bukan jika kita mengenalinya dengan 
+                            lebih jelas lagi. Yang pertama kita bahas kamera full-frame terbelih dahulu, istilah full-frame merupakan model kamera 
+                            yang dapat menyesuaikan jenis sensor pada kamera. Sensor ini berukuran 36mmx24mm ukuran tersebut sama dengan ukuran film 
+                            yang digunakan pada kamera model analog. Namun, masih ada format medium yang memiliki sensor lebih besar diatas full-frame. 
+                            Terdapat perbedaan serta keunggulan kamera full-frame dibandingkan dengan kamera APS-C sebagai berikut:
+                        </p>
+                        <ul>
+                            <li>ISO</li>
+                            <p> Dua kamera ini memiliki ISO yang berbeda yaitu kamera APS-C cukup menggunakan ISO 1600 ke atas untuk dapat 
+                                menghasilkan foto noise. Tetapi, kamera full-frame sudah menggunakan ISO 6400, dengan tingkat noisenya bisa 
+                                ditoleransi. Jika anda akan menggunakan dinamic range akan terlihat jelas pada penggunaan ISO yang tinggi, 
+                                misalnya akan memotret milky way. Sebagian orang menganggap noise pada APS-C cukup menganggangu dibanding dengan 
+                                kamera full-frame. Jika anda mengunakan untuk kebutuhan sehari-hari kamera APS-C sudah mempu meredam noise tersebut.</p>
+                            <li>Penggunaan Lensa</li>
+                            <p>Terdapat banyak lensa pada kamera yang sesuai dengan jenis kameranya. Untuk kedua kamera ini yaitu full-frame 
+                                dan APS-C perbedaannya yaitu jenis lensa yang digunakan berbeda. Kamera full-frame memiliki crop factor. Jika 
+                                anda anda menggunakan lensa 18mm, maka hasil foto anda akan menunjukkan tampilan 18m. Sedangakan pada kamera 
+                                APS-C jika anda menggunakan kamera 18mm, maka akan menjadi 27mm dengan efek crop factor 1,5 kali. Seorang fotografer 
+                                biasanya lebih memilih kamera full-frame dengan alasan cakupannya lebih luas.</p>
+                            <li>Kualitas Foto</li>
+                            <p>Kamera full-frame menghasilkan kualitas foto jauh lebih bagus karena dipengaruhi oleh ukuran 
+                                sensor yang dipakai. Kamera full-frame juga memiliki kualitas bokeh yang baik dan leih mudah bagi 
+                                anda untuk memotret bokeh jika anda menggunakan kamera jenis full-frame.</p>
+                            <li>Ukuran serta Bobot Kamera</li>
+                            <p>Semakin besar bobot kamera, maka semakin besar pula ukuran sensornya. Namun jika anda 
+                                ingin menggunakan kamera dengan ukura kecil, anda dapat mengunakan kamera mirrorless 
+                                yang memiliki sensorr full-frame.  Ukuran sensor full-frame lebih besar dibandingkan APS-C, 
+                                hal tersebut akan berpengaruh pada dynamic range. Dengan luas yang lebih besar, sensor full-frame 
+                                lebih baik dalam menangkap cahaya, utamanya dalam konsisi low-light. kamera DSLR yang memilki sensor 
+                                full frame yaitu Canon 1D Mark IV dan 5D Mark III. Sementara mirrorless dengan sensor full-frame yaitu Sony A7RII dan A7SII.</p>
+                            <p>Dari beberapa perbedaan antara kamera APS-C dan kameraa full-frame terdapat kelebihan dan juga kekurangan dari masing-masing jenis kamera. 
+                                Jika anda memiliki hobi fotografi anda dapat mebeli jenis kamera dengan kebutuhan dan juga budget yang anda miliki. 
+                                Jangan sampai anda salah membeli kamera yang sesuai dengan kebutuhan anda.</p>
+                        </ul>            
                     </div>
                 </div>
                 <div class=" md:row-span-3">
