--- a/public/artikel-detail4.html
+++ b/public/artikel-detail4.html
@@ -71,11 +71,47 @@
         <div class="container">
             <div class="gap-2 md:grid md:grid-cols-3">
                 <div class="w-full col-span-2 md:grid">
-                    <div class="mt-5 text-5xl font-bold header-title">Event Panorama Pada Tahun Ajaran Baru</div>
-                    <img src="/public/images/artikel3.jpg" class="w-full mt-5 rounded-xl">
+                    <div class="mt-5 text-5xl font-bold header-title">Kamera Mirrorless</div>
+                    <img src="/public/images/detail-artikel4.jpg" class="w-full mt-5 rounded-xl">
                     <div class="mt-5 text-sm caption">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quasi dicta! Possimus sed earum minima eligendi quo vero odit non, laudantium iusto illum atque fugit quas quaerat aliquid necessitatibus quibusdam. Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Nesciunt eum, consequatur ullam maiores cumque ipsam eius asperiores animi magni nemo accusantium doloribus dolorem laborum dolore distinctio dolorum ipsum quae debitis!
+                        <h2>Cara Setting Kamera Mirrorless Mudah dan Hasil Luar Biasa</h2>
+                        <p>
+                            Memotret merupakan sebuah kegiatan yang menghasilkan sebuah gambar, menangkap momen yang ada di sekitar kita, 
+                            mengambil gambar bisa menggunakan kamera digital ataupun kamera smartphone, untuk menghasilkan foto yang tajam 
+                            dan bagus, biasanya banyak orang memotret atau mengambil gambar dengan menggunakan kamera digital, kamera digital 
+                            juga memiliki banyak jenis yaitu Pocket Kamera, Action Cam, kamera Mirrorless dan DSRL dengan berbagai pilihan merek.
+                        </p>
+                        <p>
+                            Anda dapat menggunakan kamera yang anda suka, dan kamera yang memang mudah untuk dibawa kemana-mana agar memudahahkan 
+                            kegiatan anda. Menggunakan kamera mirrorless merupakan salah satu pilihan untuk anda yang suka memotret guna menghasilkan 
+                            gambar yang lebih bagus, dan juga hasil yang tajam. Bagi anda yang menyukai fotografi tentu sudah tidak asing lagi dengan 
+                            kamera mirrorless, apa sih kamera mirrorless itu? Kamera mirrorless merupakan kamera digital yang sudah banyak diminati karena 
+                            keunggulannya dalam segi fitur, kualitas yang dihasilkan tampak lebih nyata. Keunggulan dari kamera ini yaitu mudahnya saat 
+                            memindahkan foto ke samrtphone karena kamera mirrorless sudah dilengkapi fitur Bluetooth, NFC dan WIFI.
+                        </p>
+                        <p>
+                            Kamera ini juga sangat cocok untuk anda yang suka membuat video atau Vlog. Dengan desainnya yang sangat ringkas serta 
+                            layar yang bisa diputar memudahkan anda saat membuat video dan tidak lupa bahwa harga kamera mirrorless juga bersahabat. 
+                            Lalu bagaimana sih cara menstting kamera mirrorless agar hasilnya maksimal? Berikut ini cara agar mendapatkan hasil maksimal 
+                            saat anda menggunakan kamera mirrorless:
+                        </p>
+                        <ul>
+                            <li>Menggunakan ISO</li>
+                            <p>Salah satu untuk setting kamera mirrorless yang paling cocok digunakan untuk mengatur pencahayaan pada saat mengambil gambar, 
+                                jika anda ingin memotret di outdoor dan pada siang hari, anda harus memilih ISO yang rendah sehingga cahaya tidak akan menganggu 
+                                hasil gambar anda dan akhirnya terlihat tidak bagus.  Biasanya ISO yang dipilih 100. Anda bisa mengatur ISO jika dirasa kurang pas, 
+                                pengaturan ISO membantu anda dalam mengontrol cahaya yang sensitif. Semakin rendah nilai ISO maka semakin kurang cahaya yang masuk dalam kamera</p>
+                            <li>Meningkatkan Shutter Speed</li>
+                            <p>Yang kedua yaitu Meningkatkan Shutter Speed, setting ini untuk menghindari cahaya berlebih. Obyek pada siang hari terlihat lebih menarik biasanya. 
+                                Namun, saat cahaya menghalangi kamera mirrorless anda, maka hasilnya pun tidak akan maksimal. Namun anda tidak perlu khawatir dengan meningkatkan 
+                                Shutter Speed, dapat menurunkan aputure. Dengan anda meningkatkna Shutter Speed dari 1/1000 hingga 1/5000 maka akan mendapatkan hasil yang 
+                                maksimal dan semakin baik. Hal tesebut tidak perlu anda khawatirkan saat mengabil gambar di siang hari.</p>
+                            <li>Menggunakan Fill Flash</li>
+                            <p>Kebanyakn orang tidak suka menggunakan Flash pada kamera baik itu kamera mirrorless maupun kamera sartphone dengan alasan hasilnya tidak bagus d
+                                an terlalu cerah pada hasil foto yang dihasilkan. Namun anda perlu tau bahwa anda dapat mensetting kamera mirrorless anda untuk membantu kamera 
+                                dalam menerangi obyek yang gelap akibat membelakangi cahaya. Dengan cara tersebut dapat menghasilkan gambar yang lebih menarik dan anda hanya 
+                                perlu mengubah pengaturan Fill Flash sehingga kamera tidak mengeluarkan banyak cahaya atau dapat anda atur sesuai yang anda inginkan.</p>
+                        </ul>            
                     </div>
                 </div>
                 <div class=" md:row-span-3">
