artikel fix bener

--- a/public/artikel-detail.html
+++ b/public/artikel-detail.html
@@ -71,11 +71,43 @@
         <div class="container">
             <div class="gap-2 md:grid md:grid-cols-3">
                 <div class="w-full col-span-2 md:grid">
-                    <div class="mt-5 text-5xl font-bold header-title">Event Panorama Pada Tahun Ajaran Baru</div>
-                    <img src="/public/images/artikel3.jpg" class="w-full mt-5 rounded-xl">
+                    <div class="mt-5 text-5xl font-bold header-title">Kamera Polaroid</div>
+                    <img src="/public/images/detail-artikel.jpg" class="w-full mt-5 rounded-xl">
                     <div class="mt-5 text-sm caption">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quasi dicta! Possimus sed earum minima eligendi quo vero odit non, laudantium iusto illum atque fugit quas quaerat aliquid necessitatibus quibusdam. Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Nesciunt eum, consequatur ullam maiores cumque ipsam eius asperiores animi magni nemo accusantium doloribus dolorem laborum dolore distinctio dolorum ipsum quae debitis!
+                        <h2>Tips Foto Aesthetic Menggunakan Kamera Polaroid</h2>
+                        <p>
+                            Polaroid merupakan merk dari perusahaan kamera polaroid, perusahaan polaroid ini sudah ada sejak tahun 1947. 
+                            Kamera polaroid dikenal dengan kamera langsung jadi atau kamera instan. Kamera ini juga sempat booming untuk 
+                            mengabadikan momen liburan dan langsung jadi hasilnya. Dengan keunikan kamera polaroid ini, ada beberapa orang 
+                            tidak menyukai kamera polaroid dengan alasan susahnya saat mengambil foto dengan kamera ini dan tidak leluasa 
+                            setting dan juga mengedit seperti kamera digital. Tapi dibalik itu, kamera polaroid juga memilki penggemarnya 
+                            tersendiri karna memiliki  nilai seni dan menjadi tantangan tersendiri saat memotret. Jadi dengan tantangan 
+                            dibalik menggunakan kamera polaroid anda wajib menguasi beberapa hal agar hasil foto-foto polaid anda tidak 
+                            terlihat biasa – biasa aja dan terlihat aesthetic, berikut tips agar foto anda terlihat aesthetic:
+                        </p>
+                        <ul>
+                            <li>Memanfaatkan cahaya alami</li>
+                            <p> Agar foto terlihat aesthetic yang pertama yaitu memanfaatkan pencahaan alami dari matahari, karna saat menggunakan
+                                 kamera polaroid anda tidak bisa leluasa mengatur ISO ataupun Shutter apeed, memanfaatkan cahaya alami dari matahari 
+                                 akan membantu anda menghasilkan foto yang lebih baik di siang hari. Jika anda ingin susasana aesthetic sore hari anda 
+                                 bisa mengambil foto di saat warna langit mulai menggelap anda tidak perlu khawatir hasilnya akan jelek karna memanfaatkan 
+                                 cahaya alami matahari akan menambahkan foto aesthetic.</p>
+                            <li>Tentukan angel yang pas</li>
+                            <p>Menentukan angel berbeda dan pas saat memotret menggunakan kamera polaroid menjadi hal yang tidak boleh dilupakan, karena yang 
+                                membedakan hasil foto tersebut yaitu angel yang mereka gunakan. Semakin ahli menentukan angel, semakin bagus pula hasil foto yang
+                                 dihasilkan. Anda juga bisa sering berlatih dengan mencoba berbagai angel foto seperti konsep bird view, konsep flat lay dan konsep 
+                                 lainnya.</p>
+                            <li>Menggunakan properti foto/properti sekitar</li>
+                            <p>Foto menggunakan kamera polaroid tidak hanya memfoto subyek saja tetapi anda juga dapat memfoto obyek. Ketika anda memfoto subyek
+                                 maupun obyek jangan biarkan sekitaran obyek atau subyek tersebut kosong, anda dapat menambahkan properti untuk menunjang hasil dari 
+                                 foto yAng dihasilkan. Serunya fotografi, anda dapat belajar memadu-padankan berbagai barang dalam satu tema untuk memberikan spotlight 
+                                 pada subyek atau obyek utama.</p>
+                            <li>Tonjolkan potrait warna kontras</li>
+                            <p>Foto yang dihasilkan kamera polaroid biasanya memiliki kadar kontras yang tinggi, artinya kamera polaroid tersebut bekerja dengan optimal 
+                                ketika anda berani untuk memadukan kontras antara subyek dan latar belakang. Contohnya ketika anda menggunakan baju berwarna putih jangan 
+                                berfoto di depan latar belakang didinding atau beyground putih, anda bisa mencari latar belakang yang lebbih berwarna agar hasil foto anda 
+                                terlihat lebih aesthetic.</p>
+                        </ul>            
                     </div>
                 </div>
                 <div class=" md:row-span-3">
