--- a/public/index.html
+++ b/public/index.html
@@ -153,12 +153,12 @@
                     <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
                             <a href="artikel-detail.html">
-                                <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg " alt="Mountain ">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel.jpg " alt="Mountain ">
                             </a>
                             <div class="px-6 py-4 ">
-                                <div class="mb-2 text-xl font-bold title ">Event</div>
+                                <div class="mb-2 text-xl font-bold title ">Kamera Polaroid</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                    Polaroid merupakan merk dari perusahaan kamera polaroid, perusahaan polaroid ini 
                                 </p>
                             </div>
                         </div>
