--- a/index.html
+++ b/index.html
@@ -151,44 +151,52 @@
                 <div class="flex flex-col items-start p-5 md:flex-row" data-aos="fade-up">
                     <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/artikel-cuci-sepatu.jpg " alt="Mountain ">
+                            <a href="/public/artikel-detail.html">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel.jpg " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
-                                <div class="mb-2 text-xl font-bold title ">Bisnis Cuci Sepatu</div>
+                                <div class="mb-2 text-xl font-bold title ">Kamera Polaroid</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Haifa Irmansyah yang menggemari dunia sneaker dan streetwear tidak hanya menyukai tetapi memanfaatkan hobinya untuk memulai usahanya.
+                                    Polaroid merupakan merk dari perusahaan kamera polaroid, perusahaan polaroid ini 
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/ldk.jpg " alt="Mountain ">
+                          <a href="./public/artikel-detail2.html">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel2.jpg " alt="Mountain ">
+                          </a>
                             <div class="px-6 py-4 ">
-                                <div class="mb-2 text-xl font-bold title ">Event</div>
+                                <div class="mb-2 text-xl font-bold title ">Fotografi Bukan Sekedar Cekrek!</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                    Untuk menjadi fotografer tentunya tidak hanya bermodalkan peralatan yang ‘wah’
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/25.png " alt="Mountain ">
+                            <a href="/public/artikel-detail3.html">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel3.jpg " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
-                                <div class="mb-2 text-xl font-bold title ">Event</div>
+                                <div class="mb-2 text-xl font-bold title ">Ragam Kamera</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                    Apakah anda tertarik dengan fotografi? Jika iya, kemungkinan besar anda akan 
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
                         <div class="overflow-hidden shadow-lg card-artikel ">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/artikel1.jpg " alt="Mountain ">
+                            <a href="/public/artikel-detail4.html">
+                                <img class="object-cover object-center w-full h-56 " src="/public/images/detail-artikel4.jpg " alt="Mountain ">
+                            </a>
                             <div class="px-6 py-4 ">
-                                <div class="mb-2 text-xl font-bold title ">Mountain</div>
+                                <div class="mb-2 text-xl font-bold title ">Kamera Mirrorless</div>
                                 <p class="text-base font-bold text-gray-700 ">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                    Memotret merupakan sebuah kegiatan yang menghasilkan sebuah gambar
                                 </p>
                             </div>
                         </div>
@@ -196,14 +204,13 @@
                 </div>
                 <div class="d-flex justify-content-end" data-aos="fade-right" data-aos-duration="3000">
                     <button class="px-4 py-2 font-bold text-white rounded-full md:mb-12 md:mr-20 hover:bg-blue-700 " id="btn-magazine">
-                        <a href="/public/news.html " class="link-light ">View More</a>
+                        <a href="artikel.html " class="link-light ">View More</a>
                     </button>
                 </div>
             </div>
 
         </div>
     </div>
-
 
     <!-- gallery -->
     <section class="" id="gallery ">
