--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <div class="col-lg-4" data-aos="fade-right">
                     <h1 class="mt-5">Panorama</h1>
                     <h2 class="isi-1">Pojok Aksi dan Informasi Bina Nusantara Malang</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, fuga dolor inventore nisi dolores neque cupiditate, molestiae corporis similique numquam fugit. Distinctio accusamus temporibus odit dolore placeat quaerat, laboriosam
-                        voluptatum.
-                    </p>
+                    <p class="text-lg "> Panorama adalah UKM yang berisi kegiatan mahasiswa untuk meliput berita disekitar kampus Bina Nusantara Region Malang. </p>
+
+                   
                 </div>
                 <div class="col-lg-1"></div>
                 <div class=" foto-panorama col-lg-7 d-flex justify-content-around" data-aos="fade-left">
@@ -92,8 +92,8 @@
                         Who are <span>we ?</span>
                     </h1>
                     <div class="line"></div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloremque pariatur incidunt deleniti quis facere possimus fugit perspiciatis distinctio? Labore?</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates nisi cupiditate incidunt. Dignissimos praesentium asperiores eligendi velit nihil amet rem.</p>
+                    <p class="text-lg ">Panorama adalah UKM yang berisi kegiatan mahasiswa untuk meliput berita disekitar kampus Bina Nusantara Region Malang.</p>
+                    <p class="text-lg ">Beberapa karya telah dihasilkan oleh team Panorama Binus Malang dan kedepannya akan terus memberikan Kontribusi</p>
                 </div>
                 <div class="col-lg-7" data-aos="zoom-in">
                     <img src="/public/images/about_us.png" alt="">
@@ -232,22 +232,31 @@
         <div class="flex items-center justify-center mt-20 foto">
             <div class="grid gap-16 p-5 md:mt-10 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
                 <div class="w-full ">
-                    <img src="/public/images/g-1.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/g-1.jpg " alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/g-2.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/g-2.jpg " alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/g-3.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/g-3.jpg " width="300" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/gallery-1.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-5.jpg " width="300" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full ">
-                    <img src="/public/images/gallery-2.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full">
-                    <img src="/public/images/artikel-foto-anak.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                    <img src="/public/images/gallery-7.jpg" alt="" width="300" class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/gallery-6.jpg" alt=""  width="300"  class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
             </div>
         </div>
@@ -258,7 +267,7 @@
     <section class=" md:h-screen mt-72" id="magazine ">
         <h1 class="text-6xl font-bold text-center magazine-judul">Our Magazine</h1>
         <div class="mt-3 ml-auto mr-auto line-3 "></div>
-        <p class="mt-5 ml-auto mr-auto text-sm text-center md:max-w-xl ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
+        <p class="mt-5 ml-auto mr-auto text-lg text-center md:max-w-xl ">Berikut magazine yang telah dibuat oleh team Panorama Malang </p>
         <!-- list-magazine -->
         <div class="flex items-center justify-center foto ">
             <div class="grid gap-16 p-5 md:mt-20 sm:mx-10 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
